--- a/index.html
+++ b/index.html
@@ -55,98 +55,7 @@
       <!-- Elements -->
 
       <section class="elements">
-        <ul class="elements__container">
-          <li class="element">
-            <img
-              src="./image/karachaevsk.png"
-              alt="Фото Карачаевска"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Карачаевск</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-          <li class="element">
-            <img
-              src="./image/gora-elbrus.png"
-              alt="Фото горы Эльбрус"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-          <li class="element">
-            <img
-              src="./image/dombay.png"
-              alt="Фото горы Домбай"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Домбай</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-          <li class="element">
-            <img
-              src="./image/gora-elbrus.png"
-              alt="Фото горы Эльбрус"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-          <li class="element">
-            <img
-              src="./image/dombay.png"
-              alt="Фото горы Домбай"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Домбай</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-          <li class="element">
-            <img
-              src="./image/karachaevsk.png"
-              alt="Фото Карачаевска"
-              class="element__image"
-            />
-            <div class="element__description">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button
-                type="button"
-                aria-label="Сердце"
-                class="element__heart"
-              ></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="elements__container"></ul>
       </section>
     </main>
 
@@ -156,14 +65,14 @@
       <p class="footer__copyright">&#169; 2023 Mesto Russia</p>
     </footer>
 
-    <!-- Popup -->
+    <!-- Popup profile editor -->
 
-    <section class="popup">
+    <section class="popup popup_type_profile-edit">
       <div class="popup__container">
         <button
           type="button"
           aria-label="Закрытие окна"
-          class="popup__close"
+          class="popup__close popup__close_type_profile-edit"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="profile-form" class="popup__form">
@@ -183,6 +92,69 @@
         </form>
       </div>
     </section>
+
+    <!-- Popup add card -->
+
+    <section class="popup popup_type_add-element">
+      <div class="popup__container">
+        <button
+          type="button"
+          aria-label="Закрытие окна"
+          class="popup__close"
+        ></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form name="add-card" class="popup__form">
+          <input
+            type="text"
+            name="title"
+            placeholder="Введите название картинки"
+            class="popup__input popup__input_type_title"
+          />
+          <input
+            type="text"
+            name="image"
+            placeholder="Введите ссылку на картинку"
+            class="popup__input popup__input_type_image"
+          />
+          <button type="submit" class="popup__submit-button">Создать</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- Popup image -->
+
+    <section class="popup popup_type_image">
+      <div class="popup__image-container">
+        <button
+          type="button"
+          aria-label="Закрытие окна"
+          class="popup__close"
+        ></button>
+        <img src="" alt="" class="popup__image" />
+        <h2 class="popup__caption"></h2>
+      </div>
+    </section>
+
+    <!-- Element template -->
+
+    <template class="template">
+      <li class="element">
+        <button
+          type="button"
+          aria-label="Удалить"
+          class="element__delete"
+        ></button>
+        <img src="" alt="" class="element__image" />
+        <div class="element__description">
+          <h2 class="element__title"></h2>
+          <button
+            type="button"
+            aria-label="Сердце"
+            class="element__heart"
+          ></button>
+        </div>
+      </li>
+    </template>
 
     <script src="./scripts/index.js"></script>
   </body>
