fixed for tests

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -11,6 +12,7 @@
   </head>
 
   <body class="page">
+
     <!-- Header -->
 
     <header class="header">
@@ -24,6 +26,7 @@
     <!-- Main content -->
 
     <main class="content">
+
       <!-- Profile -->
 
       <section class="profile">
@@ -93,7 +96,7 @@
       </div>
     </section>
 
-    <!-- Popup add card -->
+    <!-- Popup add element -->
 
     <section class="popup popup_type_add-element">
       <div class="popup__container">
@@ -130,7 +133,7 @@
           aria-label="Закрытие окна"
           class="popup__close"
         ></button>
-        <img src="" alt="" class="popup__image" />
+        <img src="-" alt="" class="popup__image" />
         <h2 class="popup__caption"></h2>
       </div>
     </section>
@@ -144,7 +147,7 @@
           aria-label="Удалить"
           class="element__delete"
         ></button>
-        <img src="" alt="" class="element__image" />
+        <img src="-" alt="" class="element__image" />
         <div class="element__description">
           <h2 class="element__title"></h2>
           <button
@@ -157,5 +160,7 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+
   </body>
+
 </html>
