after first review

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           aria-label="Закрытие окна"
           class="popup__close"
         ></button>
-        <img src="-" alt="" class="popup__image" />
+        <img src="#" alt="" class="popup__image" />
         <h2 class="popup__caption"></h2>
       </div>
     </section>
@@ -147,7 +147,7 @@
           aria-label="Удалить"
           class="element__delete"
         ></button>
-        <img src="-" alt="" class="element__image" />
+        <img src="#" alt="" class="element__image" />
         <div class="element__description">
           <h2 class="element__title"></h2>
           <button
@@ -162,5 +162,5 @@
     <script src="./scripts/index.js"></script>
 
   </body>
-
+  
 </html>
