--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-
+  
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -78,19 +78,29 @@
           class="popup__close popup__close_type_profile-edit"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="profile-form" class="popup__form">
+        <form name="profile-form" class="popup__form" novalidate>
           <input
             type="text"
             name="name"
             placeholder="Введите имя"
+            minlength="2"
+            maxlength="40"
+            required
+            id="name"
             class="popup__input popup__input_type_name"
           />
+          <span id="name-error" class="popup__input-error"></span>
           <input
             type="text"
             name="job"
             placeholder="Введите работу"
+            minlength="2"
+            maxlength="200"
+            required
+            id="job"
             class="popup__input popup__input_type_job"
           />
+          <span id="job-error" class="popup__input-error"></span>
           <button type="submit" class="popup__submit-button">Сохранить</button>
         </form>
       </div>
@@ -106,19 +116,27 @@
           class="popup__close"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="add-card" class="popup__form">
+        <form name="add-card" class="popup__form" novalidate>
           <input
             type="text"
             name="title"
             placeholder="Введите название картинки"
+            minlength="2"
+            maxlength="30"
+            required
+            id="title"
             class="popup__input popup__input_type_title"
           />
+          <span id="title-error" class="popup__input-error"></span>
           <input
-            type="text"
+            type="url"
             name="image"
             placeholder="Введите ссылку на картинку"
+            id="image"
+            required
             class="popup__input popup__input_type_image"
           />
+          <span id="image-error" class="popup__input-error"></span>
           <button type="submit" class="popup__submit-button">Создать</button>
         </form>
       </div>
@@ -161,6 +179,8 @@
 
     <script src="./scripts/index.js"></script>
 
+    <script src="./scripts/validate.js"></script>
+
   </body>
-  
+
 </html>
