--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-  
+
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
 
@@ -17,7 +16,7 @@
 
     <header class="header">
       <img
-        src="./image/logo.svg"
+        src="<%=require('../src/images/logo.svg')%>"
         alt="Лого Место Россия"
         class="header__logo"
       />
@@ -32,7 +31,7 @@
       <section class="profile">
         <div class="profile__container">
           <img
-            src="./image/avatar.png"
+            src="<%=require('../src/images/avatar.png')%>"
             alt="Фото аватара"
             class="profile__image"
           />
@@ -81,15 +80,15 @@
         <form name="profile-form" class="popup__form" novalidate>
           <input
             type="text"
-            name="name"
+            name="title"
             placeholder="Введите имя"
             minlength="2"
             maxlength="40"
             required
-            id="name"
-            class="popup__input popup__input_type_name"
+            id="title"
+            class="popup__input popup__input_type_title"
           />
-          <span id="name-error" class="popup__input-error"></span>
+          <span id="title-error" class="popup__input-error"></span>
           <input
             type="text"
             name="job"
@@ -119,24 +118,24 @@
         <form name="add-card" class="popup__form" novalidate>
           <input
             type="text"
-            name="title"
+            name="name"
             placeholder="Введите название картинки"
             minlength="2"
             maxlength="30"
             required
-            id="title"
-            class="popup__input popup__input_type_title"
+            id="name"
+            class="popup__input popup__input_type_name"
           />
-          <span id="title-error" class="popup__input-error"></span>
+          <span id="name-error" class="popup__input-error"></span>
           <input
             type="url"
-            name="image"
+            name="link"
             placeholder="Введите ссылку на картинку"
-            id="image"
+            id="link"
             required
-            class="popup__input popup__input_type_image"
+            class="popup__input popup__input_type_link"
           />
-          <span id="image-error" class="popup__input-error"></span>
+          <span id="link-error" class="popup__input-error"></span>
           <button type="submit" class="popup__submit-button">Создать</button>
         </form>
       </div>
@@ -176,8 +175,6 @@
         </div>
       </li>
     </template>
-
-    <script type="module" src="./scripts/index.js"></script>
 
   </body>
 
